# ComputerVisionPracticaFinal

./: .gitignore  Notebook.ipynb  README.md  Traza buena.ipynb  Traza_Light_Model.ipynb  Traza_modelo_online_buena.ipynb  pyproject.toml  train_loggers.py
.dvc/: config
data/: .gitignore  FashionMNIST.dvc  t10k-images-idx3-ubyte.dvc  t10k-labels-idx1-ubyte.dvc  train-labels-idx1-ubyte.dvc
lib/: core.py  metrics.py  train_loggers.py  visualizations.py
memoria/: Memoria.tex  References.bib
models/: resnet.py
runs/02-01-2022--19:28:21/: events.out.tfevents.1641148101.alejandro-HP-Pavilion-Notebook.17513.0
