[tool.poetry]
name = "computervisionpracticafinal"
version = "0.1.0"
description = ""
authors = ["Sergio <sergiquijano@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.9"
jupyter = "^1.0.0"
jupyterlab = "^3.2.5"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
